# WPGNN

./: pyproject.toml  wpgnn_env.yml
src/wpgnn/: playgen.py
